Fix long command wrapping

--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -9691,6 +9691,13 @@ textarea.table.affiliation > tbody > tr > td input {
   max-width: 1700px;
   background-color: inherit;
 }
+/*
+ * The following has been adapted from jquery terminal
+ *
+ * Licensed under GNU LGPL Version 3 license
+ * Copyright (c) 2011-2013 Jakub Jankiewicz <http://jcubic.pl>
+ *
+ */
 .terminal .terminal-output .format,
 .cmd .format,
 .cmd .prompt,
@@ -9784,7 +9791,7 @@ textarea.table.affiliation > tbody > tr > td input {
   font-family: FreeMono, monospace;
   color: #223;
   background-color: #EFEFEF;
-  font-size: 12px;
+  font-size: 11.5px;
   line-height: 14px;
 }
 .terminal-output > div {
