--- a/codalab/apps/web/static/less/actionbar.less
+++ b/codalab/apps/web/static/less/actionbar.less
@@ -11,6 +11,14 @@
   max-width:1700px;
   background-color:inherit;
 }
+
+/*
+ * The following has been adapted from jquery terminal
+ *
+ * Licensed under GNU LGPL Version 3 license
+ * Copyright (c) 2011-2013 Jakub Jankiewicz <http://jcubic.pl>
+ *
+ */
 .terminal .terminal-output .format,
 .cmd .format,
 .cmd .prompt,
@@ -93,7 +101,7 @@
     font-family: FreeMono, monospace;
     color: #223;
     background-color: #EFEFEF;
-    font-size: 12px;
+    font-size: 11.5px;  // HACK: Reduced from 12px to help terminal wrap long lines properly
     line-height: 14px;
 }
 .terminal-output > div {
